--- a/web/templates/web/administrar_usuarios.html
+++ b/web/templates/web/administrar_usuarios.html
@@ -4,7 +4,7 @@
 {% block extra_css %}
 <style>
     .bg-admin {
-        background-color: #6c757d;
+        background-color: #198754;
         color: white;
     }
     
@@ -19,7 +19,7 @@
     }
     
     .usuario-card.admin {
-        border-top: 3px solid #6c757d;
+        border-top: 3px solid #198754;
     }
     
     .usuario-card.regular {
@@ -27,7 +27,7 @@
     }
     
     .badge.bg-admin {
-        background-color: #6c757d;
+        background-color: #198754;
     }
     
     .badge.bg-regular {
@@ -41,7 +41,7 @@
     }
     
     .admin-icon {
-        color: #6c757d;
+        color: #198754;
     }
     
     .regular-icon {
