--- a/web/templates/web/login.html
+++ b/web/templates/web/login.html
@@ -4,20 +4,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/formularios.css' %}">
-<style>
-    .btn-registro {
-        margin-top: 15px;
-        background-color: #6c757d;
-        border-color: #6c757d;
-        transition: all 0.3s ease;
-    }
-    
-    .btn-registro:hover {
-        background-color: #5a6268;
-        border-color: #545b62;
-        transform: translateY(-2px);
-    }
-</style>
+<link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
 {% block content %}
