--- a/web/templates/web/confirmar_logout.html
+++ b/web/templates/web/confirmar_logout.html
@@ -9,7 +9,7 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card shadow">
-            <div class="card-header bg-primary text-white">
+            <div class="card-header bg-success text-white">
                 <h4 class="card-title mb-0">Confirmar cierre de sesión</h4>
             </div>
             <div class="card-body">
@@ -22,7 +22,7 @@
                     
                     <form method="post" action="{% url 'logout' %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-primary">
+                        <button type="submit" class="btn btn-success">
                             <i class="bi bi-box-arrow-right"></i> Sí, cerrar sesión
                         </button>
                     </form>
